[gd_scene load_steps=6 format=3 uid="uid://cmxc840ooqx64"]

[ext_resource type="Texture2D" uid="uid://bsrc0x70ktotf" path="res://assets/TestImages/A_Panel_96x96.png" id="1_2t53p"]
[ext_resource type="Script" uid="uid://doqqddpequhsl" path="res://scenes/Test/reels.gd" id="2_ni3dv"]
[ext_resource type="Texture2D" uid="uid://bmio57wnsiyxm" path="res://assets/TestImages/Apple_96x96.png" id="3_amgai"]
[ext_resource type="Texture2D" uid="uid://bvvlg2488aj0x" path="res://assets/TestImages/Banana_96x96.png" id="4_ni3dv"]
[ext_resource type="Texture2D" uid="uid://c4qvtvy4fn77n" path="res://assets/TestImages/Cherry_96x96.png" id="5_amgai"]

[node name="SlotSpinTestScene" type="Node2D"]

[node name="EndLocation" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(919, 1199)
scale = Vector2(2.3125, 2.3125)

[node name="SpawnLocation" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(919, -978)
scale = Vector2(2.3125, 2.3125)

[node name="Slots" type="Node2D" parent="."]

[node name="Slot_1" type="Sprite2D" parent="Slots"]
unique_name_in_owner = true
position = Vector2(907, 120)
scale = Vector2(2.3125, 2.3125)
texture = ExtResource("1_2t53p")

[node name="Slot_2" type="Sprite2D" parent="Slots"]
unique_name_in_owner = true
position = Vector2(907, 340)
scale = Vector2(2.3125, 2.3125)
texture = ExtResource("1_2t53p")

[node name="Slot_3" type="Sprite2D" parent="Slots"]
unique_name_in_owner = true
position = Vector2(907, 570)
scale = Vector2(2.3125, 2.3125)
texture = ExtResource("1_2t53p")

[node name="Slot_4" type="Sprite2D" parent="Slots"]
unique_name_in_owner = true
position = Vector2(907, 800)
scale = Vector2(2.3125, 2.3125)
texture = ExtResource("1_2t53p")

[node name="Slot_5" type="Sprite2D" parent="Slots"]
unique_name_in_owner = true
position = Vector2(909, 1030)
scale = Vector2(2.3125, 2.3125)
texture = ExtResource("1_2t53p")

[node name="Reels" type="Node2D" parent="."]
position = Vector2(913, 115)
script = ExtResource("2_ni3dv")

[node name="Apple_1" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
texture = ExtResource("3_amgai")

[node name="Banana_1" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, 214)
texture = ExtResource("4_ni3dv")

[node name="Cherry_1" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, 453)
texture = ExtResource("5_amgai")

[node name="Apple_2" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, 688)
texture = ExtResource("3_amgai")

[node name="Banana_2" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, 913)
texture = ExtResource("4_ni3dv")

[node name="Apple_3" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -1103)
texture = ExtResource("3_amgai")

[node name="Banana_3" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -889)
texture = ExtResource("4_ni3dv")

[node name="Cherry_2" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -650)
texture = ExtResource("5_amgai")

[node name="Apple_4" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -415)
texture = ExtResource("3_amgai")

[node name="Banana_4" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -190)
texture = ExtResource("4_ni3dv")

[node name="Apple_5" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -2184)
texture = ExtResource("3_amgai")

[node name="Banana_5" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -1970)
texture = ExtResource("4_ni3dv")

[node name="Cherry_3" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -1731)
texture = ExtResource("5_amgai")

[node name="Apple_6" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -1496)
texture = ExtResource("3_amgai")

[node name="Banana_6" type="Sprite2D" parent="Reels"]
unique_name_in_owner = true
position = Vector2(0, -1271)
texture = ExtResource("4_ni3dv")

[node name="SpinTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="SpinTimer" to="Reels" method="_on_spin_timer_timeout"]
